@@ -31,6 +31,8 @@ List of some MISSING features that are planned to be included. For specific func
 
 * v0.8
 	* Thorough search for any missing raylib functions that should get implemented.
+* v0.9
+	* Move to raylib 5.5.
 
 ## Usage
 
